# my-thesis

./: README.md  pyproject.toml  requirements.txt
accounts/: forms.py  views.py
accounts/templates/accounts/: login.html  register.html  register_done.html
cities/: apps.py  forms.py  models.py  urls.py  views.py
cities/migrations/: 0001_initial.py  0002_auto_20211220_1712.py  0003_auto_20211220_1715.py
cities/templates/cities/: create.html  detail.html  home.html  update.html
diplom/: asgi.py  settings.py  urls.py  views.py  wsgi.py
diplom/settings/: production.py
routes/: forms.py  models.py  utils.py  views.py
routes/migrations/: 0001_initial.py  0002_rename_travel_times_route_total_time.py  0003_rename_total_time_route_travel_times.py
routes/templates/routes/: create.html  delete.html  detail.html  home.html  list.html
templates/: about.html  base.html  form.html  home.html
trains/: admin.py  forms.py  models.py  urls.py  views.py
trains/migrations/: 0001_initial.py  0002_rename_travel_table_train_travel_time.py  0003_alter_train_options.py
trains/templates/trains/: create.html  delete.html  detail.html  home.html
