[tool.poetry]
name = "diplom"
version = "0.1.0"
description = "My thesis"
authors = ["Salavat <altinbaevsal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.1.0"
Django = "^4.0.1"
flake8 = "^4.0.1"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
whitenoise = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
